--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <a href="#foreign" class="nav-item card ru unvisible">Иностранные языки</a>
       </nav>
       <div class="avatar">
-        <!-- <img src="./images/viacheslav.jpg" alt="Viacheslav"> -->
-        <!-- <div class="card">
-          <h1>Viacheslav Kiryukhin</h1>
+        <img src="./images/viacheslav.jpg" alt="Viacheslav">
+        <div class="card">
+          <h1 class="eng">Viacheslav Kiryukhin</h1>
+          <h1 class="ru unvisible">Вячеслав Кирюхин</h1>
           <ul>
             <li>
               <a href="tel:+79372652131">+7-937-265-21-31</a>
@@ -42,7 +43,7 @@
               <a href="mailto:slawkir1984@gmail.com">slawkir1984@gmail.com</a>
             </li>
           </ul>
-        </div> -->
+        </div>
       </div>
       
     </header>
@@ -129,14 +130,19 @@
           <li class="ru unvisible">2021, ITGid. Вебразработка</li>
           <li class="eng">2021, RSS (Rolling Scope School), JavaScript - Frontend</li>
           <li class="ru unvisible">2021, RSS (Rolling Scope School), JavaScript - Frontend</li>
+          <li class="eng">2022, EPAM Sistems, .Net/Frontend - Development</li>
+          <li class="ru unvisible">2022, EPAM Sistems, .Net/Frontend - разработка</li>
 
         </ul>
       </section>
       <section class="foreign card" id="foreign">
-        <h2>Foreign languages</h2>
+        <h2 class="eng">Foreign languages</h2>
+        <h2>Иностранные языки</h2>
         <ul>
-          <li>English, A2</li>
-          <li>German, B1</li>
+          <li class="eng">English, A2</li>
+          <li class="ru unvisible">Английский, A2</li>
+          <li class="eng">German, B1</li>
+          <li class="ru unvisible">Немецкий, B1</li>
         </ul>
       </section>
     </main>
