fix: change adaptive layout

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </section>
       <section class="foreign card" id="foreign">
         <h2 class="eng">Foreign languages</h2>
-        <h2>Иностранные языки</h2>
+        <h2 class="ru unvisible">Иностранные языки</h2>
         <ul>
           <li class="eng">English, A2</li>
           <li class="ru unvisible">Английский, A2</li>
